tests/script_runtime_errors/assign_const/error.txt
Error: 
    1 | const a = {"snot": "badger"};
    2 | 
    3 | let a.snot = event;
      |     ^^^^^^^^^^^^^^ Can't assign to the `a` constant
    4 | 
    5 | a